# opc-agent

./: .gitignore  .npmignore  AUDIT-TASK.md  CHANGELOG.md  COMPETITIVE-GAP.md  CONTRIBUTING.md  README.md  README.zh-CN.md  STUDIO-FIX-5678.md  STUDIO-FIX-ALL.md  STUDIO-REWRITE-TASK.md  TASK.md  USABILITY-ISSUES.md  fix-encoding.mjs  fix-sidebar.mjs  install.ps1  install.sh  models.json  opc_cli.py  package-lock.json  package.json  pyproject.toml  serve-studio.js  serve-test.js  srv-out.txt  test-full.js  test-sidebar.js  test-studio.js  test-studio3.js  test-studio4.js  tmp-check.js  tmp-sc.js
.github/: PULL_REQUEST_TEMPLATE.md
benchmark/: run_benchmark.py
docs/: index.md
examples/: README.md  basic-agent.ts  brain-integration.ts  multi-channel.ts
opc/: server.py
scripts/: install.ps1  install.sh  postbuild.js
src/: cli.ts  daemon.ts  doctor.ts  index.ts
templates/: Dockerfile  docker-compose.yml
test-agent/: .gitignore  Dockerfile  README.md  agent.yaml  docker-compose.yml  oad.yaml  package-lock.json  package.json  tsconfig.json
tests/: a2a-http.test.ts  a2a-protocol.test.ts  a2a.test.ts  agent.test.ts  agui-protocol.test.ts  analytics.test.ts  api-server.test.ts  approvals.test.ts  audio.test.ts  auto-learn.test.ts  brain-seed-extended.test.ts  brain-seed.test.ts  browser.test.ts  builtin-tools.test.ts  channel.test.ts  channels-extra.test.ts  chat-cli.test.ts  cli.test.ts  collaboration.test.ts  conftest.py  context-compressor.test.ts  context-refs.test.ts  cron-engine.test.ts  daemon.test.ts  deepbrain-wire.test.ts  deploy-and-dag.test.ts  doctor.test.ts  document-processor.test.ts  (+66 more)
(+328 files in other folders)
