[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opc-agent"
version = "0.2.0"
description = "Local-first AI Agent for Mac. Zero cloud dependency."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Deepleaper", email = "dev@deepleaper.com"}
]
keywords = ["ai", "agent", "local", "ollama", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=14.0",
    "psutil>=6.0",
    "aiosqlite>=0.20",
    "fire>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
opc = "opc_cli:main"

[project.urls]
Homepage = "https://github.com/Deepleaper/opc-agent"
Repository = "https://github.com/Deepleaper/opc-agent"

[tool.setuptools.packages.find]
include = ["opc*"]

[tool.setuptools]
py-modules = ["opc_cli"]

[tool.setuptools.package-data]
"opc" = ["web/dist/**/*"]
